# ValuScope

./: .gitignore  README.md  pyproject.toml  setup.py
valuscope/: __init__.py  __main__.py  main.py  templates.py
valuscope/core/: __init__.py  analysis.py  data_fetcher.py  tests.py  valuation.py
valuscope/core/tests/: test_rev_term_plot.py  tests.py
